// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hextext: index render component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HexText
    classes="class"
    value="Hextext Name"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <CopyToClipboard
          onCopy={[Function]}
          options={undefined}
          text="Hextext Name"
        >
          <span
            onClick={[Function]}
          >
            <Blueprint.Tooltip
              className="smd-pointer"
              content="Copy to clipboard"
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              isDisabled={false}
              openOnTargetFocus={true}
              position={1}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />
            </Blueprint.Tooltip>
          </span>
        </CopyToClipboard>,
        <Blueprint.Tooltip
          className="text-tooltip text-left class"
          content="Hextext Name"
          hoverCloseDelay={0}
          hoverOpenDelay={100}
          isDisabled={false}
          openOnTargetFocus={true}
          position={1}
          rootElementTag="span"
          transitionDuration={100}
          useSmartArrowPositioning={true}
          useSmartPositioning={false}
        >
          <Text
            ellipsize={true}
          >
            Hextext Name
          </Text>
        </Blueprint.Tooltip>,
      ],
      "className": "hex-text",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span
            onClick={[Function]}
          >
            <Blueprint.Tooltip
              className="smd-pointer"
              content="Copy to clipboard"
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              isDisabled={false}
              openOnTargetFocus={true}
              position={1}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />
            </Blueprint.Tooltip>
          </span>,
          "onCopy": [Function],
          "options": undefined,
          "text": "Hextext Name",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Blueprint.Tooltip
              className="smd-pointer"
              content="Copy to clipboard"
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              isDisabled={false}
              openOnTargetFocus={true}
              position={1}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />
            </Blueprint.Tooltip>,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />,
              "className": "smd-pointer",
              "content": "Copy to clipboard",
              "hoverCloseDelay": 0,
              "hoverOpenDelay": 100,
              "isDisabled": false,
              "openOnTargetFocus": true,
              "position": 1,
              "rootElementTag": "span",
              "transitionDuration": 100,
              "useSmartArrowPositioning": true,
              "useSmartPositioning": false,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pt-icon pt-icon-clipboard",
                "onMouseOut": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": [Function],
          },
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            ellipsize={true}
          >
            Hextext Name
          </Text>,
          "className": "text-tooltip text-left class",
          "content": "Hextext Name",
          "hoverCloseDelay": 0,
          "hoverOpenDelay": 100,
          "isDisabled": false,
          "openOnTargetFocus": true,
          "position": 1,
          "rootElementTag": "span",
          "transitionDuration": 100,
          "useSmartArrowPositioning": true,
          "useSmartPositioning": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Hextext Name",
            "ellipsize": true,
          },
          "ref": null,
          "rendered": "Hextext Name",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CopyToClipboard
            onCopy={[Function]}
            options={undefined}
            text="Hextext Name"
          >
            <span
              onClick={[Function]}
            >
              <Blueprint.Tooltip
                className="smd-pointer"
                content="Copy to clipboard"
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                isDisabled={false}
                openOnTargetFocus={true}
                position={1}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />
              </Blueprint.Tooltip>
            </span>
          </CopyToClipboard>,
          <Blueprint.Tooltip
            className="text-tooltip text-left class"
            content="Hextext Name"
            hoverCloseDelay={0}
            hoverOpenDelay={100}
            isDisabled={false}
            openOnTargetFocus={true}
            position={1}
            rootElementTag="span"
            transitionDuration={100}
            useSmartArrowPositioning={true}
            useSmartPositioning={false}
          >
            <Text
              ellipsize={true}
            >
              Hextext Name
            </Text>
          </Blueprint.Tooltip>,
        ],
        "className": "hex-text",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span
              onClick={[Function]}
            >
              <Blueprint.Tooltip
                className="smd-pointer"
                content="Copy to clipboard"
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                isDisabled={false}
                openOnTargetFocus={true}
                position={1}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />
              </Blueprint.Tooltip>
            </span>,
            "onCopy": [Function],
            "options": undefined,
            "text": "Hextext Name",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.Tooltip
                className="smd-pointer"
                content="Copy to clipboard"
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                isDisabled={false}
                openOnTargetFocus={true}
                position={1}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />
              </Blueprint.Tooltip>,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />,
                "className": "smd-pointer",
                "content": "Copy to clipboard",
                "hoverCloseDelay": 0,
                "hoverOpenDelay": 100,
                "isDisabled": false,
                "openOnTargetFocus": true,
                "position": 1,
                "rootElementTag": "span",
                "transitionDuration": 100,
                "useSmartArrowPositioning": true,
                "useSmartPositioning": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "pt-icon pt-icon-clipboard",
                  "onMouseOut": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              ellipsize={true}
            >
              Hextext Name
            </Text>,
            "className": "text-tooltip text-left class",
            "content": "Hextext Name",
            "hoverCloseDelay": 0,
            "hoverOpenDelay": 100,
            "isDisabled": false,
            "openOnTargetFocus": true,
            "position": 1,
            "rootElementTag": "span",
            "transitionDuration": 100,
            "useSmartArrowPositioning": true,
            "useSmartPositioning": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Hextext Name",
              "ellipsize": true,
            },
            "ref": null,
            "rendered": "Hextext Name",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Hextext: index render component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HexText />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <CopyToClipboard
          onCopy={[Function]}
          options={undefined}
          text={undefined}
        >
          <span
            onClick={[Function]}
          >
            <Blueprint.Tooltip
              className="smd-pointer"
              content="Copy to clipboard"
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              isDisabled={false}
              openOnTargetFocus={true}
              position={1}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />
            </Blueprint.Tooltip>
          </span>
        </CopyToClipboard>,
        <Blueprint.Tooltip
          className="text-tooltip text-left "
          content={undefined}
          hoverCloseDelay={0}
          hoverOpenDelay={100}
          isDisabled={false}
          openOnTargetFocus={true}
          position={1}
          rootElementTag="span"
          transitionDuration={100}
          useSmartArrowPositioning={true}
          useSmartPositioning={false}
        >
          <Text
            ellipsize={true}
          />
        </Blueprint.Tooltip>,
      ],
      "className": "hex-text",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span
            onClick={[Function]}
          >
            <Blueprint.Tooltip
              className="smd-pointer"
              content="Copy to clipboard"
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              isDisabled={false}
              openOnTargetFocus={true}
              position={1}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />
            </Blueprint.Tooltip>
          </span>,
          "onCopy": [Function],
          "options": undefined,
          "text": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Blueprint.Tooltip
              className="smd-pointer"
              content="Copy to clipboard"
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              isDisabled={false}
              openOnTargetFocus={true}
              position={1}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />
            </Blueprint.Tooltip>,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <span
                className="pt-icon pt-icon-clipboard"
                onMouseOut={[Function]}
              />,
              "className": "smd-pointer",
              "content": "Copy to clipboard",
              "hoverCloseDelay": 0,
              "hoverOpenDelay": 100,
              "isDisabled": false,
              "openOnTargetFocus": true,
              "position": 1,
              "rootElementTag": "span",
              "transitionDuration": 100,
              "useSmartArrowPositioning": true,
              "useSmartPositioning": false,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pt-icon pt-icon-clipboard",
                "onMouseOut": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": [Function],
          },
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            ellipsize={true}
          />,
          "className": "text-tooltip text-left ",
          "content": undefined,
          "hoverCloseDelay": 0,
          "hoverOpenDelay": 100,
          "isDisabled": false,
          "openOnTargetFocus": true,
          "position": 1,
          "rootElementTag": "span",
          "transitionDuration": 100,
          "useSmartArrowPositioning": true,
          "useSmartPositioning": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "ellipsize": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CopyToClipboard
            onCopy={[Function]}
            options={undefined}
            text={undefined}
          >
            <span
              onClick={[Function]}
            >
              <Blueprint.Tooltip
                className="smd-pointer"
                content="Copy to clipboard"
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                isDisabled={false}
                openOnTargetFocus={true}
                position={1}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />
              </Blueprint.Tooltip>
            </span>
          </CopyToClipboard>,
          <Blueprint.Tooltip
            className="text-tooltip text-left "
            content={undefined}
            hoverCloseDelay={0}
            hoverOpenDelay={100}
            isDisabled={false}
            openOnTargetFocus={true}
            position={1}
            rootElementTag="span"
            transitionDuration={100}
            useSmartArrowPositioning={true}
            useSmartPositioning={false}
          >
            <Text
              ellipsize={true}
            />
          </Blueprint.Tooltip>,
        ],
        "className": "hex-text",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span
              onClick={[Function]}
            >
              <Blueprint.Tooltip
                className="smd-pointer"
                content="Copy to clipboard"
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                isDisabled={false}
                openOnTargetFocus={true}
                position={1}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />
              </Blueprint.Tooltip>
            </span>,
            "onCopy": [Function],
            "options": undefined,
            "text": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.Tooltip
                className="smd-pointer"
                content="Copy to clipboard"
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                isDisabled={false}
                openOnTargetFocus={true}
                position={1}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />
              </Blueprint.Tooltip>,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <span
                  className="pt-icon pt-icon-clipboard"
                  onMouseOut={[Function]}
                />,
                "className": "smd-pointer",
                "content": "Copy to clipboard",
                "hoverCloseDelay": 0,
                "hoverOpenDelay": 100,
                "isDisabled": false,
                "openOnTargetFocus": true,
                "position": 1,
                "rootElementTag": "span",
                "transitionDuration": 100,
                "useSmartArrowPositioning": true,
                "useSmartPositioning": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "pt-icon pt-icon-clipboard",
                  "onMouseOut": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              ellipsize={true}
            />,
            "className": "text-tooltip text-left ",
            "content": undefined,
            "hoverCloseDelay": 0,
            "hoverOpenDelay": 100,
            "isDisabled": false,
            "openOnTargetFocus": true,
            "position": 1,
            "rootElementTag": "span",
            "transitionDuration": 100,
            "useSmartArrowPositioning": true,
            "useSmartPositioning": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "ellipsize": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
